--- a/footer.html
+++ b/footer.html
@@ -33,7 +33,7 @@
                     <a href="index.php">Главная</a><br>
                     <a href="history.php">История</a><br>
                     <a href="afisha.php">Афиша</a><br>
-                    <a href="visitors.html">Посетителям</a><br>
+                    <a href="visitors.php">Посетителям</a><br>
                     <a href="#">Контакты</a><br></p>
             </div>
         </div>
